# Buckets

./: .gitignore  README.md  pyproject.toml  test.txt
scripts/: create_bucket.py  delete_bucket.py  delete_file.py  download.py  list_buckets.py  list_files.py  upload.py
